Add flimsy api security
